Fixed spacing around note divs

--- a/themes/theme.scss
+++ b/themes/theme.scss
@@ -631,7 +631,8 @@ span {
   border: 3px solid black;
   border-radius: 10px;
   padding: 0px;
-  background-color: rgba(0, 149, 255, 0.1)
+  background-color: rgba(0, 149, 255, 0.1);
+  margin-bottom: 0.5em;
 }
 
 .note blockquote {
@@ -656,7 +657,7 @@ span {
   padding: 10px;
   margin:0;
   color: black;
-  background-color: rgba(0, 149, 255, 0.4)
+  background-color: rgba(0, 149, 255, 0.4);
 }
 
 div.rule {
